# dsp-dialect

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build-and-test.yml
dsp-opt/: CMakeLists.txt  dsp-opt.cpp
include/: CMakeLists.txt
include/DSP/: CMakeLists.txt  DSP.td  DSPDialect.h  DSPDialect.td  DSPOps.h  DSPOps.td  DSPPasses.td
lib/DSP/: CMakeLists.txt  DSPDialect.cpp  DSPOps.cpp  DSPToLinalg.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/DSP/: DSPTestUtils.cpp  canonicalize.mlir  dummy.mlir  test_jit.mlir
tools/: dsp-opt.cpp
